fixed navbar overlapping at start up

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 
 body {
   background-color: black;
+  padding-top: 200px;
 }
 .box-main {
   border: 3px solid white;
